# careersim

./: .dockerignore  .gitignore  LANGGRAPH_MIGRATION.md  LICENSE.md  PERSONAS.md  README.md  TODO.md  VOICE_MODE.md  codecov.yml  docker-compose.local.yml  docker-compose.yml  vercel.json
.cursor/plans/: langchain-migration-plan-73f26f9a.plan.md
.cursor/rules/: figma-design-system.mdc
.github/workflows/: build-images.yml  ci.yml
agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_simulation.py
agent/data/: personas.json  simulations.json
agent/data/documents/personas/brenda-vance-hr-manager/: interview-approach.md
agent/data/documents/personas/marcus-whitfield-timeboxed-director/: networking-philosophy.md
agent/data/documents/personas/vikram-shah-pipeline-recruiter/: dm-style.md
agent/data/documents/shared/: interview-best-practices.md
agent/data/documents/simulations/behavioral-interview-brenda/: rubric.md
agent/data/documents/simulations/informational-chat-marcus/: rubric.md
agent/data/documents/simulations/recruiter-coldreach-vikram/: rubric.md
agent/scripts/: prefetch_voice_models.py  voice_perf.py  voice_smoke.py
agent/src/careersim_agent/: __init__.py  config.py  main.py
agent/src/careersim_agent/api/: __init__.py  app.py
agent/src/careersim_agent/graph/: __init__.py  builder.py  state.py
agent/src/careersim_agent/graph/nodes/: __init__.py  analysis.py  conversation.py  evaluation.py  proactive.py  retrieval.py
agent/src/careersim_agent/prompts/: __init__.py  templates.py
agent/src/careersim_agent/services/: __init__.py  conversation_service.py  data_loader.py  eval_service.py  persona_sync.py  retrieval_service.py  transformers.py
agent/src/careersim_agent/ui/: __init__.py  gradio_app.py
agent/src/careersim_agent/voice/: __init__.py  persona_voice.py  pipeline.py  state_bridge.py  transcripts.py  turns.py  worker.py
agent/src/careersim_agent/voice/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py  openai_tts.py  piper_local.py  whisper_local.py  whisper_openai.py
agent/tests/: __init__.py  conftest.py  test_analysis_node.py  test_api.py  test_conversation_service.py  test_data_consistency.py  test_debrief.py  test_evaluation_node.py  test_graph.py  test_persona_sync.py  test_proactive_node.py  test_retrieval_node.py  test_state_bridge.py  test_voice_eval.py  test_voice_integration.py  test_voice_persona.py  test_voice_pipeline.py  test_voice_prompt.py  test_voice_providers.py  test_voice_turns.py  test_voice_worker.py
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
api/scripts/: e2e-flow.ts
api/src/: index.ts  server.ts
api/src/agent/: client.ts  types.ts
api/src/config/: env.ts
api/src/db/: client.ts  migrate.ts  schema.ts
api/src/plugins/: altcha.ts  auth.ts  errors.ts  mailer.ts  rate-limit.ts
api/src/utils/: cors.ts
api/tests/: agent-client.test.ts  altcha.test.ts  analytics.test.ts  auth.test.ts  cors.test.ts  db.client.test.ts  docs.test.ts  env.test.ts  health.test.ts  index.test.ts  personas.avatar.test.ts  rate-limit.test.ts  sessions.batch.test.ts  sessions.nudge.test.ts  sessions.report.test.ts  sessions.statelessness.test.ts  sessions.stream.test.ts  simulations.test.ts  voice.routes.test.ts
api/tests/helpers/: build-test-app.ts  fake-agent.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  eslint.security.config.js  jest.config.ts  langgraph.json  nodemon.json  obfuscator.config.json  package.json  pnpm-lock.yaml  test-nlp.js  tsconfig.eslint.json  tsconfig.json
backend/scripts/: fix-esm-imports.cjs
backend/src/: server.ts
backend/src/config/: database.ts  datasource.ts  env.ts  swagger.ts  tensorflow.ts  transformers.ts
backend/src/entities/: Category.ts  PerformanceAnalytics.ts  (+8 more)
frontend/: .env.example  .eslintrc.cjs  .eslintrc.security.cjs  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  react-app-env.d.ts  vite-env.d.ts
imagegen/: .gitignore  README.md  RESEARCH.md  pyproject.toml
imagegen/modal_app/: app.py
imagegen/scripts/: generate_character.py
imagegen/workflows/: character_base.json  character_edit.json
infrastructure/aws/: README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/aws-transformers/: README.md  main.tf  variables.tf
infrastructure/k8s/: README.md
landing/: .env.example  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
landing/figma/: design-source.json  sync-summary.json
landing/scripts/: sync-figma.mjs
rag/: .env.example  Dockerfile  README.md  main.py  requirements.txt  start.sh  test_api.py
transformers/: .dockerignore  .env.example  .gitignore  AUTHENTICATION.md  Dockerfile  Dockerfile.dev  README.md  cache_models.sh  docker-compose.yml  download_models.py  env.example  main.py  requirements.txt  start.sh  test_api.py
web/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
(+257 files in other folders)
