[project]
name = "careersim-agent"
version = "1.0.0"
description = "LangGraph-based conversation agent with Gradio developer UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "gradio>=6.15.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
# ---- Voice mode (self-hosted defaults) -------------------------------
# Installed only into the `agent-voice` worker image (see
# docker-compose.local.yml) — the regular `agent` chat process and the
# pytest suite don't need them. All imports inside
# `careersim_agent.voice.providers` are lazy, so this extra stays
# truly optional at module-load time.
voice = [
    "livekit-agents>=0.12",
    "livekit-plugins-silero>=0.7",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "websockets>=12.0",
]
# Premium / opt-in cloud voice providers. Pull on top of the `voice`
# extra when the deployment selects Deepgram or ElevenLabs.
voice-cloud = [
    "deepgram-sdk>=3.7",
    "livekit-plugins-deepgram>=0.7",
    "livekit-plugins-elevenlabs>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careersim_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/careersim_agent"]
branch = true
omit = [
    # CLI entrypoint (`python -m careersim_agent.main`) — a thin argparse
    # dispatcher with no business logic; exercised manually, not worth a
    # process-spawning test.
    "src/careersim_agent/main.py",
    # Dev-only Gradio console for manually poking at the agent. Never
    # runs in production (the FastAPI app + agent-voice worker are the
    # real entrypoints) and pulls in a full Gradio UI to exercise.
    "src/careersim_agent/ui/*",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
]
